//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Mood {
  user_id String [not null]
  user User [not null]
  group_id String
  user_text String [not null]
  user_mood String [not null, default: 'neutial']
  mood_score Int [not null, default: 0]
  stable_score Int [not null, default: 0]
  engage Int [not null, default: 0]
  timestamp DateTime [default: `now()`, unique, not null]
  hasResponse Response
  lastUser User
}

Table Response {
  user_id String
  user User
  group_id String
  ai_text String [not null]
  timestamp DateTime [default: `now()`, unique, not null]
  aim_to_mood_timestamp DateTime [unique]
  aimTo Mood
  lastUser User
}

Table UserApi {
  user_id String [unique, not null]
  user User [not null]
  user_api String [not null]
  timestamp DateTime [default: `now()`, not null]
  groups Group [not null]
}

Table Group {
  group_id String [unique, not null]
  belongToUserId String [not null]
  belongToUser User [not null]
  belongToUserApiId String
  belongToUserApi UserApi
}

Table User {
  user_id String [pk]
  user_role String [not null, default: 'general']
  summary String
  lastmood_timestamp DateTime [unique]
  lastmood Mood
  lastresponse_timestamp DateTime [unique]
  lastresponse Response
  moodHistory Mood [not null]
  responseHistory Response [not null]
  groups Group [not null]
  userApi UserApi
}

Ref: Mood.user_id - User.user_id [delete: Cascade]

Ref: Response.user_id - User.user_id [delete: Cascade]

Ref: Response.aim_to_mood_timestamp - Mood.timestamp [delete: Set Null]

Ref: UserApi.user_id - User.user_id [delete: Cascade]

Ref: Group.belongToUserId > User.user_id [delete: Cascade]

Ref: Group.belongToUserApiId > UserApi.user_id [delete: Set Null]

Ref: User.lastmood_timestamp - Mood.timestamp [delete: Set Null]

Ref: User.lastresponse_timestamp - Response.timestamp [delete: Set Null]